<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_done">OK</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by Bump Tech</string>
    <string name="udacity">Udacity - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="no_file_selected">Please select the file to download</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="no_permission">No permission</string>
    <string name="reason_for_permission">To save the download files, \"LoadApp\" need access to the filesystem</string>
    <string name="okay">Okay</string>
</resources>
